addons/kyverno/policies/edtech-ny_edlaw2d_encryption_and_contracts-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-ny_edlaw2d_encryption_and_contracts
  annotations:
    rulehub.id: edtech.ny_edlaw2d_encryption_and_contracts
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: edtech.ny_edlaw2d_encryption_and_contracts: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
